fixed touch controls on lightbox and coming soon title on smaller browsers

--- a/css/agency.css
+++ b/css/agency.css
@@ -835,5 +835,6 @@ body {
   position: absolute;
   top: 40%;
   width: 100%;
+  font-size: 10vw;
 }
 
